[package]
name = "bevy_ecs_ldtk"
description = "An ECS-friendly ldtk plugin for bevy."
version = "0.7.0"
edition = "2021"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
repository = "https://github.com/Trouv/bevy_ecs_ldtk"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ldtk", "game", "gamedev", "map-editor"]
categories = ["game-development"]
exclude = ["assets/*", "repo/*", "scripts/*"]

[workspace]
members = ["macros"]

[dependencies]
bevy_ecs_ldtk_macros = { version = "0.7.0", optional = true, path = "macros" }
bevy_ecs_tilemap = { git = "https://github.com/flara-dev/bevy_ecs_tilemap.git", default-features = false }
bevy = { git = "https://github.com/flara-dev/bevy.git", version = "0.11.0-dev", default-features = false, features = ["bevy_sprite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
paste = "1.0"

[dev-dependencies]
bevy = { git = "https://github.com/flara-dev/bevy.git", version = "0.11.0-dev", }
bevy_rapier2d = { git = "https://github.com/flara-dev/bevy_rapier.git" }
rand = "0.8"
bevy-inspector-egui = "0.18"

[features]
default = ["derive", "render"]
derive = ["bevy_ecs_ldtk_macros"]
atlas = ["bevy_ecs_tilemap/atlas"]
render = ["bevy_ecs_tilemap/render"]

[[example]]
name = "platformer"
path = "examples/platformer/main.rs"

[[example]]
name = "field_instances"
path = "examples/field_instances/main.rs"


[patch."https://github.com/flara-dev/bevy_ecs_tilemap.git"]
bevy_ecs_tilemap = { path = "../bevy_ecs_tilemap" }

[patch."https://github.com/flara-dev/bevy_rapier.git"]
bevy_rapier2d = { path = "../bevy_rapier" }
